# qt-helloworld

./: CMakeLists.txt  main.qml  qml.qrc
